--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     </template>
     <div id="paginacion">
       <div class="tabs">
-        <div id="first">First</div>
-        <div id="previous">previus</div>
-        <div id="next">next</div>
-        <div id="last">last</div>
+        <div id="first">Primera</div>
+        <div id="previous">Anterior</div>
+        <div id="next">Siguiente</div>
+        <div id="last">Última</div>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
           <p class="cursos__texto">
             Esta tienda trabaja con el sistema de ventas de BSALE
           </p>
-          <a class="cursos__enlace" href="https://www.bsale.cl/">Más información</a>
+          <a class="cursos__enlace" href="https://www.bsale.cl/" target="_blank">Más información</a>
         </div>
       </div>
     </section>
